--- a/service2/dockerfile
+++ b/service2/dockerfile
@@ -1,3 +1,5 @@
 FROM python
+WORKDIR /service2/
+ADD . /service2//
 RUN pip install aio-pika
-CMD [ "python", "main.py" ]
+CMD [ "python3", "-u", "main.py" ]
