add api gateway for user_service

--- a/backend/api/dockerfile
+++ b/backend/api/dockerfile
@@ -1,5 +1,5 @@
 FROM python
 WORKDIR /api/
 ADD . /api/
-RUN pip install aio-pika pika fastapi uvicorn pydantic-settings
+RUN pip install aio-pika pika fastapi uvicorn pydantic-settings httpx
 CMD [ "python3", "main.py" ]
