--- a/backend/booking_service/requirements.txt
+++ b/backend/booking_service/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.14.1
+aio_pika==6.8.2
 annotated-types==0.7.0
 anyio==4.8.0
 asyncpg==0.30.0
@@ -15,6 +16,7 @@ MarkupSafe==3.0.2
 passlib==1.7.4
 pydantic==2.10.6
 pydantic_core==2.27.2
+pydantic_settings==2.8.1
 python-dotenv==1.0.1
 sniffio==1.3.1
 SQLAlchemy==2.0.38
